= plist - All-purpose Property List manipulation library

2011-12-08:
 * Added null keys support to dict

=== Release version 3.0.0!

2010-02-23:
 * Ruby 1.9.x compatibility!

2010-02-16:
 * excise a bunch of unnecessary @@ variables
 * fix up some tests for cross-version compatibility

2010-02-14:
 * generalized cleanup:
   * fix old file headers
   * modernize rakefile
   * clean up rdoc

2010-01-08:
 * move from RubyForge Subversion to GitHub

2007-02-22 (r81):
 * make the plist parser accept strings contain XML or any object that responds to #read (File and StringIO being the intended targets here).  Test and idea contributed by Chuck Remes.

2006-09-20 (r80):
 * tweak a comment in generator.rb to make it clear that we're not using Base64.b64encode because it's broken.

=== Release version 3.0.0!

2006-09-20 (r77 - r79):
 * move IndentedString inside Plist::Emit and :nodoc: it
 * Tag 3.0.0! (from rev 78)

2006-09-19 (r73 - r75):
 * Really fix the rakefile this time (apparently I deleted some code that I needed...)
 * alter the fix_whitespace rake task to ignore the assets directory
 * cleanup whitespace

2006-09-18 (r70 - r72):
 * Update this file ;)
 * Fix Rakefile
   * gem install -t now works correctly
   * Remove super-sekr1t rdoc staging area from rdoc publishing task

2006-09-15 (r64 - r69):
* Change behavior of empty collection elements to match What Apple Does
* Fix some gem packaging infrastructure

2006-09-13 (r61 - r63):
* Merge generator injection removal branch into trunk!

2006-09-13 (r52 - r60):
* Fix indentation/newlines in generator (finally!)
* Refix indentation to be more faithful to the way Apple emits their plists
* Remove horrific regex and replace it with proper comment parsing
* Empty plists return nil when parsed
* Sort hash keys before emitting (now we can test multi-element hashes!)
* Inject #<=> into Symbol so that sorting Symbol-keyed hashes won't freak out

2006-09-12 (r47 - r51):
* More test rejiggering